[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/ui/PauseSelection.gd" type="Script" id=2]

[node name="PauseSelection" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -104.0
margin_right = 118.0
margin_bottom = 104.0
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 156.0
margin_bottom = 128.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 236.0
margin_bottom = 208.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_right = 196.0
margin_bottom = 208.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 49.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="ReturnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
text = "Вернуться"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 156.0
margin_bottom = 102.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
text = "Начать сначала"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 156.0
margin_bottom = 155.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
text = "Настройки"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 156.0
margin_bottom = 208.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="QuitToTilteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4"]
margin_top = 10.0
margin_right = 156.0
margin_bottom = 39.0
text = "В главное меню"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer3/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer4/QuitToTilteButton" to="." method="_on_QuitToTilteButton_pressed"]
